; ModuleID = '/home/carl/AnghaBench/netdata/health/extr_health_json.c_health_string2json.c'
source_filename = "/home/carl/AnghaBench/netdata/health/extr_health_json.c_health_string2json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"%s\22%s\22:\22\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\22\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"%s\22%s\22:null%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*, i8*, i8*)* @health_string2json to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @health_string2json(i32* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %9, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %31

13:                                               ; preds = %5
  %14 = load i8*, i8** %9, align 8
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %31

18:                                               ; preds = %13
  %19 = load i32*, i32** %6, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 (i32*, i8*, i8*, i8*, ...) @buffer_sprintf(i32* %19, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %20, i8* %21)
  %23 = load i32*, i32** %6, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 @buffer_strcat_htmlescape(i32* %23, i8* %24)
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @buffer_strcat(i32* %26, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %28 = load i32*, i32** %6, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = call i32 @buffer_strcat(i32* %28, i8* %29)
  br label %37

31:                                               ; preds = %13, %5
  %32 = load i32*, i32** %6, align 8
  %33 = load i8*, i8** %7, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = load i8*, i8** %10, align 8
  %36 = call i32 (i32*, i8*, i8*, i8*, ...) @buffer_sprintf(i32* %32, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8* %33, i8* %34, i8* %35)
  br label %37

37:                                               ; preds = %31, %18
  ret void
}

declare dso_local i32 @buffer_sprintf(i32*, i8*, i8*, i8*, ...) #1

declare dso_local i32 @buffer_strcat_htmlescape(i32*, i8*) #1

declare dso_local i32 @buffer_strcat(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
